--- a/prjPOOAngelinoFelipeGilson/src/fatec/poo/view/GuiProduto.form
+++ b/prjPOOAngelinoFelipeGilson/src/fatec/poo/view/GuiProduto.form
@@ -207,6 +207,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtCodigo">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCodigoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtDescricao">
       <Properties>
@@ -223,6 +226,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Consultar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnConsultarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtQtdeDisponivel">
       <Properties>
