--- a/prjPOOAngelinoFelipeGilson/src/fatec/poo/view/GuiCliente.form
+++ b/prjPOOAngelinoFelipeGilson/src/fatec/poo/view/GuiCliente.form
@@ -78,7 +78,8 @@
                               <EmptySpace max="32767" attributes="0"/>
                               <Component id="lblUF" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="txtUF" min="-2" pref="161" max="-2" attributes="0"/>
+                              <Component id="cboUf" min="-2" pref="70" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -131,8 +132,8 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="txtCidade" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblCidade" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtUF" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblUF" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cboUf" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -247,11 +248,6 @@
         <Property name="text" type="java.lang.String" value="UF"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtUF">
-      <Properties>
-        <Property name="enabled" type="boolean" value="false"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JTextField" name="txtCep">
       <Properties>
         <Property name="enabled" type="boolean" value="false"/>
@@ -358,6 +354,46 @@
         </Property>
         <Property name="actionCommand" type="java.lang.String" value="&lt;Not Set&gt;"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="cboUf">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="28">
+            <StringItem index="0" value=" "/>
+            <StringItem index="1" value="AC"/>
+            <StringItem index="2" value="AL"/>
+            <StringItem index="3" value="AM"/>
+            <StringItem index="4" value="AP"/>
+            <StringItem index="5" value="BA"/>
+            <StringItem index="6" value="CE"/>
+            <StringItem index="7" value="DF"/>
+            <StringItem index="8" value="ES"/>
+            <StringItem index="9" value="GO"/>
+            <StringItem index="10" value="MA"/>
+            <StringItem index="11" value="MG"/>
+            <StringItem index="12" value="MS"/>
+            <StringItem index="13" value="MT"/>
+            <StringItem index="14" value="PA"/>
+            <StringItem index="15" value="PB"/>
+            <StringItem index="16" value="PE"/>
+            <StringItem index="17" value="PI"/>
+            <StringItem index="18" value="PR"/>
+            <StringItem index="19" value="RJ"/>
+            <StringItem index="20" value="RN"/>
+            <StringItem index="21" value="RO"/>
+            <StringItem index="22" value="RR"/>
+            <StringItem index="23" value="RS"/>
+            <StringItem index="24" value="SE"/>
+            <StringItem index="25" value="SC"/>
+            <StringItem index="26" value="SP"/>
+            <StringItem index="27" value="TO"/>
+          </StringArray>
+        </Property>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
